Create new main
I have created a new main notebook, which starts from the data set where the sign of dT is flipped.

The code is not copied from the first notebook, but rather it's adapted to debug, simplify, rationalize. In this first part, I've redone the visualization of data.

--- a/Data 1 - Analysis_branch grid search.ipynb
+++ b/Data 1 - Analysis_branch grid search.ipynb
@@ -142,6 +142,7 @@
    "cell_type": "markdown",
    "id": "15897ec6-ed90-48f4-9ffc-016523aef145",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -443,7 +444,6 @@
    "cell_type": "markdown",
    "id": "c69c61a2-11bb-47af-b9a3-6eb75e78235b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -552,7 +552,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
