Import Training NN - part 1
- Finished running the visualization code for the energy-filtered data set. Wrote the relevant conclusions down

- Finished importing the code that creates and trains NN models

- Tested the functions to see that they work fine

- Changed the location of the pictures to their dedicated folder

--- a/Data 2 - Main.ipynb
+++ b/Data 2 - Main.ipynb
@@ -106,6 +106,7 @@
    "cell_type": "markdown",
    "id": "75ee3fa6-1839-4966-a035-b7f78d1ab2fb",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
